--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -2,7 +2,7 @@
     background-color: var(--gray-100);
     padding: 36px 0;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0;
 }
 
 .page-title {
